--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       <button id="sendMessageBtn" class="button" onclick="sendMessage()">Send</button>
       <p id="typingStatus" class="typing-status"></p>
     </div>
+    <div id="inoming">
+      <p>Incoming Messages:</p>
+      <ul id="incomingList">
+        
+      </ul>
+    </div>
   </div>
 </div>
 <!-- ... (remaining code) ... -->
@@ -35,7 +41,8 @@
     const socket = io();
     let username = '';
     let currentRoom = '';
-
+    let currentSenders = new Set();
+ 
     // Function to display chat messages
     function displayMessage(message) {
         const messages = document.getElementById('messages');
@@ -99,11 +106,24 @@
         const recipientInput = prompt('Enter the username of the person you want to chat with:');
         if(recipientInput){
             currentRoom = ''; // Private chat, so not specific room is needed.
-            document.getElementById('roomSelection').style.display = 'none';
+            document.getElementById('roomSelection').style.display = 'block'; // Changed from none
             document.getElementById('chatRoom').style.display = 'block';
             document.getElementById('currentRoom').textContent = `Private chat with ${recipientInput}`;
             document.getElementById('messageInput').focus();
             socket.emit('privateChat', recipientInput);
+        }
+    }
+
+    function startPrivateChatAuto(recipient){
+        const recipientInput = recipient
+        if(recipientInput){
+            currentRoom = ''; // Private chat, so not specific room is needed.
+            document.getElementById('roomSelection').style.display = 'block';
+            document.getElementById('chatRoom').style.display = 'block';
+            document.getElementById('currentRoom').textContent = `Private chat with ${recipientInput}`;
+            document.getElementById('messageInput').focus();
+            socket.emit('privateChat', recipientInput);
+            window.event.target.style.backgroundColor = "blue"
         }
     }
 
@@ -126,6 +146,7 @@
       if (message) {
         socket.emit('chatMessage', message);
         messageInput.value = '';
+        displayMessage(`You said: ${message}`);
       }
     }
 
@@ -134,6 +155,14 @@
       const li = document.createElement('li');
       li.textContent = message;
       messages.appendChild(li);
+
+      let indexOfQution = message.indexOf(':');
+      console.log('indexOfQution: ', indexOfQution);
+      let sender = message.substring(10,indexOfQution);
+
+      if( currentSenders.has(sender) ){
+        document.getElementById(`pv_${sender}`).style.backgroundColor = "red";
+      }
       console.log(message);
     });
 
@@ -154,10 +183,21 @@
 
     socket.on('startPrivateChat', (sender)=>{
         console.log(sender, ' is sending pv');
-        // document.getElementById('roomSelection').style.display = 'none';
-        // document.getElementById('chatRoom').style.display = 'block';
-        // document.getElementById('currentRoom').textContent = `Private chat with ${sender}`;
-        // document.getElementById('messageInput').focus();
+        document.getElementById('roomSelection').style.display = 'block'; // Changed from none
+        document.getElementById('chatRoom').style.display = 'block';
+        document.getElementById('currentRoom').textContent = `Private chat with ${sender}`;
+        document.getElementById('messageInput').focus();
+
+        if(!currentSenders.has(sender)){
+          currentSenders.add(sender);
+          const incomingMessage = document.createElement('button',{
+            innerHTML : `new message from ${sender}`
+          });
+          document.getElementById('incomingList').insertAdjacentHTML("beforeend",`
+          <li><button id="pv_${sender}" class="button" onclick="startPrivateChatAuto('${sender}')">new message from ${sender}</button</li>`);
+        }else{
+          document.getElementById(`pv_${sender}`).style.backgroundColor = "red";
+        }
     })
   </script>
 </body>
